--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
 <form name="fileUplaod" method="post" action="/api/report" enctype="multipart/form-data">
-    <input type="file" name="image">
+    <input type="file" name="data">
     <input type="submit" class="">
 </form>
