saving all the files with gridfs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
 <form name="fileUplaod" method="post" action="/api/report" enctype="multipart/form-data">
     <input type="file" name="data">
     <input type="submit" class="">
+    <input type="hidden" value="{&quot;latitude&quot; : &quot;123123123&quot;, &quot;longitude&quot; : &quot;123123123&quot;}" name="location">
+    <input type="hidden" value="1429916194291" name="fixationDate">
+    <input type="text" name="deviceId">
 </form>
