export, get by id, get by distance to a point, added description to the model

--- a/views/client.html
+++ b/views/client.html
@@ -51,6 +51,8 @@
                    '<source type ="' + item.mimetype + '"' + 'src = "/uploads/' + item.fileName + '">' + '</video>'
                 });
               }
+              infoWindow.content += '<p>' + item.description + '</p>';
+              infoWindow.content += '<br><a href="/api/export/' + item._id + '">Export</a>';
               console.log(infoWindow.content);
               infoWindow.open(map, marker);
             });
