--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
     <input type="file" name="data">
     <input type="submit" class="">
     <input type="text" value="{&quot;latitude&quot; : &quot;123123123&quot;, &quot;longitude&quot; : &quot;123123123&quot;}" name="location">
-    <input type="hidden" value="1429916194291" name="fixationDate">
+    <input type="hidden" value="1429916194291" name="fixationTime">
+    <input type="hidden" value="This guy parks like a complete douche! Pls ban" name="description">
     <input type="text" name="deviceId">
 </form>
