--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<form name="multiUpload" method="post" action="/api/test/report" enctype="multipart/form-data">
+<form name="multiUpload" method="post" action="/api/report" enctype="multipart/form-data">
     <input type="file" name="files" multiple />
 
     <input type="submit" class="">
