--- a/views/client.html
+++ b/views/client.html
@@ -155,36 +155,36 @@ function putMarkers(infoWindow, map, roadpolizeiAPI, parametrs){
   })
 
   function customGetClick(){
-    
+    var latObject = $(document).getElementById("lat");
+    var latObject = $(document).getElementById("lng");
+    var latObject = $(document).getElementById("rad");
   }
 
 </script>
 </head>
 <body>
    <div id="map_canvas" style="width: 100%; height: 500px;"></div>
-   <br>
-   <div id="searchForm" style="width: 100%; height: 200px">
-      <form name = "querySearchForm" method="get" action="/api/reports/query" enctype="multipart/form-data">
-        <input type ="text" value="SearchQuery" name="searchQuery">
+   <div id="searchForm" style="width: 100%; height: 200px; background: #15b89a">
+      <br>
+      <form name = "querySearchForm" method="get" action="/api/reports/search" enctype="multipart/form-data">
+        <div>
+          <input type="text" placeholder="Latitude" name="lat">
+          <input type="text" placeholder="Longitude" name="lng">
+          <input type="text"placeholder="Radius" name="rad">
+        </div>
+        <p>
+        <input type="text" placeholder="Fixation start time" name="fixationTimeStart">
+        <input type="text" placeholder="Fixation end time" name="fixationTimeEnd"> 
+        <p>
+        <input type="text" placeholder="Description" name="description"> 
+        <p>
+        <input type="text" placeholder="FacebookID"name="facebookID"> 
+        <p>
         <input type ="submit" name ="querySearchSubmit" value="Search">
-      </form>
-      <p>
-      <form name = "radiusSearchForm" method="get" action="/api/reports/:lat/:lng/:rad" enctype="multipart/form-data">
-        <input type="text" value="lat" name="lat">
-        <input type="text" value="lng" name="lng">
-        <input type="text" value="Rad" name="rad">
-        <button name ="radiusFilterSubmit" click="customGetClick">Filter</button>
-      </form>
-      <p>
-      <form>
-        <input type="text" value="fixationStart" name="fixationTimeStart"> <p>
-        <input type="text" value="fixationEnd" name="fixationEnd"> <p>
-        <input type="text" value="Description" name="description"> <p>
-        <input type="text" value="FacebookID"name="facebookID">
-        <input type ="submit" name ="otherFilterSubmit" value="Filter">
-      </form>
-        
-      
+      </form>    
+   </div>
+   <div style="width: 100%; background: #de4940; text-align: center">
+      OKAY
    </div>
 </body>
 </html>
