some search form adjustemnts

--- a/views/client.html
+++ b/views/client.html
@@ -173,13 +173,12 @@ function putMarkers(infoWindow, map, roadpolizeiAPI, parametrs){
           <input type="text"placeholder="Radius" name="rad">
         </div>
         <p>
-        <input type="text" placeholder="Fixation start time" name="fixationTimeStart">
-        <input type="text" placeholder="Fixation end time" name="fixationTimeEnd"> 
+        Start <input type="date" placeholder="Fixation start time" name="fixationTimeStart">
+        End <input type="date" placeholder="Fixation end time" name="fixationTimeEnd"> 
         <p>
         <input type="text" placeholder="Description" name="description"> 
         <p>
         <input type="text" placeholder="FacebookID"name="facebookID"> 
-        <p>
         <input type ="submit" name ="querySearchSubmit" value="Search">
       </form>    
    </div>
