--- a/views/client.html
+++ b/views/client.html
@@ -6,7 +6,7 @@
   <script type="text/javascript"
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSIqBc9ijkkX7ve8igM8ImhqYNPlByF0o">
   </script>
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="https://code.jquery.com/jquery-latest.min.js"></script>
 
   <link rel="stylesheet" type="text/css" href="./mainClient.css">
 
