search api function complete

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <input type="submit" class="">
     <input type="text" value="{&quot;latitude&quot; : &quot;12&quot;, &quot;longitude&quot; : &quot;12&quot;}" name="location">
     <input type="hidden" value="1429916194291" name="fixationTime">
-    <input type="hidden" value="This guy parks like a complete douche! Pls ban" name="description">
-    <input type="text" name="deviceId">
+    <input type="text" value="desc" name="description">
+    <input type="text" value="fb id" name="fbId">
+    <input type="text" value="device" name="deviceId">
 </form>
