--- a/views/client.html
+++ b/views/client.html
@@ -91,6 +91,7 @@ function putMarkers(map, markers, roadpolizeiAPI){
   $.getJSON( roadpolizeiAPI, {}).done(function( data ) {       
 
     console.log(data);
+    alert("CYKA");
     for (var i = 0; i < data.length; i++) {
       var item = data[i];
       //console.log(item);
