--- a/views/client.html
+++ b/views/client.html
@@ -209,7 +209,7 @@ function putMarkers(map, markers, roadpolizeiAPI){
         <p>
         <input type="text" placeholder="FacebookID"name="facebookID" id="facebookID">         
       </form>    
-      <button id ="querySearchSubmit" value="Search" onclick="applySearch()">Search</button>
+      <button class="searchButton" id ="querySearchSubmit" value="Search" onclick="applySearch()">Search</button>
    </div>
 </body>
 </html>
