--- a/views/client.html
+++ b/views/client.html
@@ -22,9 +22,9 @@
         '<div class = "rp-item"></div>',
         '<div class = "rp-item-info"></div>',
         '<div class = "rp-button-container">',
-          '<button class = "rp-button-prev">Prev</button>',
+          '<button class = "rp-button-prev"></button>',
           '<p class = "rp-counter"> 0/0 </p>',
-          '<button class = "rp-button-next">Next</button>',
+          '<button class = "rp-button-next"></button>',
         '</div>',
       '</div>'
     ].join(""));
