--- a/css/mainClient.css
+++ b/css/mainClient.css
@@ -29,11 +29,11 @@
 }
 
 .rp-button-next{
-  	background-image: url('./assets/next.png');
+  	background-image: url('https://raw.githubusercontent.com/dshpet/roadpolizei-api/master/assets/prev.png');
 	float: right;
 }
 .rp-button-prev{
-    background-image: url('./assets/prev.png');
+    background-image: url('https://raw.githubusercontent.com/dshpet/roadpolizei-api/master/assets/prev.png');
 	float: left;
 }
 .rp-counter {
