--- a/views/client.html
+++ b/views/client.html
@@ -82,7 +82,7 @@
         var dateString = '' + d.getFullYear() + d.getMonth() + d.getDate();
         $('.rp-item-info').html([
           '<p>' + description + '</p>',
-          '<br><p>Date:</p>',
+          '<p>Date:</p>',
           '<p>' + dateString + '</p>',
           '<a href="' + fbUrl + '">Author</a>'
           ].join(''));
@@ -137,7 +137,8 @@ function putMarkers(map, markers, roadpolizeiAPI){
             infoWindow.roadpolizei.files.push({ mimetype : file.mimetype, url : file.url });
           }
         }
-
+          console.log(data);
+          console.log(data.fbId);
           infoWindow.open(map, self);
           infoWindow.roadpolizei.setInfo(data.description, data.fbId, data.fixationTime);
         });
