--- a/views/client.html
+++ b/views/client.html
@@ -203,8 +203,8 @@ function putMarkers(map, markers, roadpolizeiAPI){
 </script>
 </head>
 <body>
-   <div id="map_canvas" style="width: 80%; height: 700px; float: left;"></div>
-   <div id="searchForm" style="width: 20%; height: 100%; float: right; background: #15b89a">
+   <div id="map_canvas" class= "mapDiv"></div>
+   <div id="searchForm" class= "searchDiv">
       <br>
       <form name = "querySearchForm" method="get" action="/api/reports/search" enctype="multipart/form-data">
         <div>
