--- a/views/client.html
+++ b/views/client.html
@@ -175,7 +175,7 @@ function putMarkers(map, markers, roadpolizeiAPI){
     string += $('#fixationTimeStart')[0].name + '=' +  $('#fixationTimeStart')[0].value + '&';
     string += $('#fixationTimeEnd')[0].name + '=' +  $('#fixationTimeEnd')[0].value + '&';
     string += $('#description')[0].name + '=' +  $('#description')[0].value + '&';
-    string += $('#facebookID')[0].name + '=' +  $('#facebookID')[0].value;
+    string += $('#facebookID')[0].name + '=' +  $('#facebookID')[0].value + '&';
     string += $('#carNumber')[0].name + '=' +  $('#carNumber')[0].value;
     return string;
   }
