carNumber added to infoWindow view #2

--- a/views/client.html
+++ b/views/client.html
@@ -82,7 +82,7 @@
         var dateString = '' + d.getFullYear() + '.' +  d.getMonth() + '.' + d.getDate();
         $('.rp-item-info').html([
           '<p>' + description + '</p>',
-          '<p>' + carNumber + '</p>',
+          '<p>Car: [' + carNumber + ']</p>',
           '<p>Date: ' + dateString + '</p>',
           '<a href="' + fbUrl + '">Author</a>'
           ].join(''));
