map bounds updated zoom and scaling #1

--- a/views/client.html
+++ b/views/client.html
@@ -148,6 +148,7 @@ function putMarkers(map, markers, roadpolizeiAPI){
     }
   });
   map.fitBounds(bounds);
+  map.center = markers[0].position;
 }
 
   $(document).ready(function(){
