--- a/views/client.html
+++ b/views/client.html
@@ -105,6 +105,7 @@
   }
 
 function putMarkers(map, markers, roadpolizeiAPI){
+  var anchorMarker;
   $.getJSON( roadpolizeiAPI, {}).done(function( data ) {       
     for (var i = 0; i < data.length; i++) {
       var item = data[i];
@@ -121,6 +122,7 @@ function putMarkers(map, markers, roadpolizeiAPI){
 
       markers.push(marker);
       bounds.extend(marker.position);
+      anchorMarker = marker;
       // process multiple info windows
       // add click event
       google.maps.event.addListener(marker, 'click', function() {
@@ -148,7 +150,7 @@ function putMarkers(map, markers, roadpolizeiAPI){
     }
   });
   map.fitBounds(bounds);
-  map.center = markers[0].position;
+  map.center = anchorMarker.position;
 }
 
   $(document).ready(function(){
